force-app/main/default/objects/Support_Staff__c/Support_Staff__c.object-meta.xml
<CustomObject>
    <label>Support Staff</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Support Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>