force-app/main/default/objects/Support_Staff__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Support Staff</relationshipLabel>
    <relationshipName>Support_Staff</relationshipName>
    <type>Lookup</type>
</CustomField>