force-app/main/default/objects/Support_Staff__c/fields/Number_of_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Positions__c</fullName>
    <label>Number of Positions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>