force-app/main/default/objects/Support_Staff__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location/ Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Staff</relationshipLabel>
    <relationshipName>Support_Staff</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>