force-app/main/default/objects/Support_Staff__c/fields/Other_Staff_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Staff_Category__c</fullName>
    <description>Required in case of Staff Category Others.</description>
    <label>Other Staff Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>