force-app/main/default/objects/Support_Staff__c/fields/Period_on_Project__c.field-meta.xml
<CustomField>
    <fullName>Period_on_Project__c</fullName>
    <label>Period on project (In months)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>