force-app/main/default/objects/Support_Staff__c/fields/Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade__c</fullName>
    <label>Monthly Salary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>