force-app/main/default/objects/Support_Staff__c/fields/Staff_Category__c.field-meta.xml
<CustomField>
    <fullName>Staff_Category__c</fullName>
    <label>Staff Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JRF</fullName>
            </value>
            <value>
                <fullName>SRF</fullName>
            </value>
            <value>
                <fullName>Post Doc</fullName>
            </value>
            <value>
                <fullName>PhD student</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>