force-app/main/default/objects/Support_Staff__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Percentage of working time on this project</description>
    <inlineHelpText>Percentage of working time on this project</inlineHelpText>
    <label>Percentage of Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>