force-app/main/default/objects/Support_Staff__c/validationRules/Required_Other_Staff_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Other_Staff_Category</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Staff_Category__c , &apos;Others&apos;) &amp;&amp; ISBLANK(Other_Staff_Category__c)</errorConditionFormula>
    <errorDisplayField>Other_Staff_Category__c</errorDisplayField>
    <errorMessage>Required other staff category.</errorMessage>
</ValidationRule>